hphp/test/quick/hh_bad_end.php.expectf
HipHop Fatal error: syntax error, unexpected T_HH_ERROR, expecting $end in %s on line 2
